<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_menu"
        app:showAsAction="always"
        android:icon="@drawable/ic_search_white_24dp"
        app:actionViewClass="android.widget.SearchView"
        android:title="@string/search_hint_restaurant" />
</menu>